Small fix on mobile

--- a/src/app/modules/pokedex/components/pokedex-details/pokedex-details.component.scss
+++ b/src/app/modules/pokedex/components/pokedex-details/pokedex-details.component.scss
@@ -2,7 +2,7 @@
 
 p { margin: 0; }
 .isLoading { padding: 5rem; }
-.large-img { max-width: 300px; }
+.large-img { max-width: 280px; }
 
 //Color of the each type
 .bug { background-color: $bug!important; }
